--- a/manuscript/references_clean.bib
+++ b/manuscript/references_clean.bib
@@ -378,6 +378,61 @@
   YEAR         = {2012},
 }
 
+@ARTICLE{Ernest2003:lifehistorycharacteristicsofplacental,
+  ABSTRACT     = {The purpose of this data set was to compile general life history characteristics for a variety of mammalian species in order to perform comparative life history analyses among different taxa and different body size groups. Data were collected from the literature, and data sources are documented for each species within the data file. Since life history characteristics will show minor variation with environmental conditions (resource availability, climate, competitive environment, and predation pressure) a general life history for each species was sought to average over minor differences in local populations. To create a general life history for each species, life history values are often an average from several literature sources. Life history variables included in the data set are: maximum lifespan (months), age of first reproduction (months), gestation time (months), weaning age (months), weaning mass (grams), litter size, litters per year, newborn mass (grams), and adult body mass (grams). Since these data were collected with the intent to examine general life history patterns, they are good for examining large-scale patterns, specifically in comparing life history characteristics for different orders or families of mammals. All orders of placental mammals, except Chiroptera (bats) are represented in this data set: Artiodactyla (161 species), Carnivora (197 species), Cetacea (55 species), Dermoptera (2 species), Hydracoidea (4 species), Insectivora (91 species), Lagomorpha (42 species), Macroscelidea (10 species), Perissodactyla (15 species), Pholidota (7 species), Primates (156 species), Proboscidea (2 species), Rodentia (665 species), Scandentia (7 species), Sirenia (5 species), Tubulidentata (1 species), and Xenarthra (20 species). There are two caveats on this data set, however. First, these data are not appropriate for asking population-level questions where the integration of life history parameters with specific environmental conditions is important. Second, while this data set is extensive, it is not exhaustive. The creation of an exhaustive data set is the ultimate goal, but that goal is still several years from completion. In the meantime, researchers utilizing the data set are urged to conduct their own search for data not reported within the current data set. Researchers are also encouraged to contact the author of the data set and alert her to literature sources containing data for missing variables or species.},
+  AUTHOR       = {S. K. Morgan Ernest},
+  DOI          = {10.1890/02-9002},
+  JOURNALTITLE = {Ecology},
+  NUMBER       = {12},
+  PAGES        = {3402},
+  TITLE        = {Life history characteristics of placental non-volant mammals.},
+  VOLUME       = {84},
+  YEAR         = {2003},
+}
+
+@ARTICLE{Kiltie1982:intraspecificvariationmammaliangestation,
+  ABSTRACT     = {Many summaries of the relationships between mean gestation period and other physiological and life history traits of terrestrial eutherian mammals have been published (Huggett and Widdas, 1951; Kihlstrim, 1972; Sacher and Staffeldt, 1974; Frazer and Huggett, 1974; Blueweiss et al., 1978; Case, 1978; Western, 1979; Tuomi, 1980; Zeveloff and Boyce, 1980; McNab, 1980; Lindstedt and Calder, 1981; Eisenberg, 1981; Millar, 1981), but data on intraspecific variation in gestation time have not been summarized and compared. Here I present a preliminary study of determinants of intraspecific variation in gestation time. The results may be of practical value in captive breeding programs and field studies of reproduction, and may provide insight into the relationships among breeding seasonality, gestation period, and the geographic distribution of mammalian species},
+  AUTHOR       = {Richard A. Kiltie},
+  DOI          = {10.2307/1380270},
+  JOURNALTITLE = {J. Mamm.},
+  MONTH        = {Nov},
+  NUMBER       = {4},
+  PAGES        = {646--652},
+  TITLE        = {Intraspecific Variation in the Mammalian Gestation Period},
+  VOLUME       = {63},
+  YEAR         = {1982},
+}
+
+@BOOK{Smith1984:amazingarmadillo,
+  AUTHOR    = {Larry L. Smith and Robin W. Doughty},
+  ISBN      = {0-292-70375-9},
+  PUBLISHER = {University of Texas Press, Austin},
+  TITLE     = {The Amazing Armadillo: Geography of a Folk Critter},
+  YEAR      = {1984},
+}
+
+@ARTICLE{Harder.ea1993:Gestationandplacentationin,
+  ABSTRACT     = {Estrus, gestation, and placentation were studied in the Virginia opossum (Didelphis virginiana) and the gray short-tailed oppossum (Monodelphis domestica), representatives of the prototypic, New World marsupial family Didelphidae. Didelphis is a large (3,000 g), pouched opossum that exhibits a 28-day estrous cycle, spontaneous estrus and ovulation, and a high ovulation rate (60 ova per cycle). Monodelphis is a small (100 g), pouchless opossum with male-induced estrus and ovulation and a moderate ovulation rate (12 ova per cycle). Implantation occurs on day 10 of the 13-day gestation period in Didelphis and on day 12 of the 15-day gestation in Monodelphis. Gestation and placentation, including the ultrastructural features of trophoblastic apposition to the uterine mucosa, are very similar in Didelphis and Monodelphis. Differences, such as a larger increase in uterine volume and a more highly folded endometrium following implantation in Monodelphis are minor. They appear to be related to the smaller maternal body size and the relatively larger uterine load of embryos in Monodelphis. Because body size is one of the major variables among New World marsupials, the descriptions of gestation and placentation presented here for Didelphis and Monodelphis, provide a basis for comparison in future studies of didelphid marsupials.},
+  AUTHOR       = {J D Harder and M J Stonerook and J Pondy},
+  DOI          = {10.1002/jez.1402660511},
+  JOURNALTITLE = {J. Exp. Zoolog. Part A Comp. Exp. Biol.},
+  MONTH        = {Aug},
+  NUMBER       = {5},
+  PAGES        = {463--479},
+  PMID         = {8371092},
+  TITLE        = {Gestation and placentation in two New World opossums: Didelphis virginiana and Monodelphis domestica},
+  VOLUME       = {266},
+  YEAR         = {1993},
+}
+
+@BOOK{Nevo1997:mosiacevolutionofsubterranianmammals,
+  AUTHOR    = {Eviatar Nevo},
+  ISBN      = {0-19-857526-6},
+  PUBLISHER = {Oxford University Press},
+  TITLE     = {Mosaic evolution of subterranean mammals: Regression, progression, and global convergence},
+  YEAR      = {1999},
+}
+
 @BOOK{Nevo2001:adaptiveradiationofblindsubterraneanmole,
   AUTHOR    = {Eviatar Nevo and Elena Ivanitskaya and Avigdor Beiles},
   ISBN      = {9057820862},
